--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,5 +5,14 @@
 
 html,
 body {
+	background-color: rgb(30, 30, 30);
+	color: rgba(255, 255, 255, 0.87); 
+	background-image: 
+		radial-gradient(at 0% 0%, rgba(100, 150, 255, 0.33) 0px, transparent 50%), 
+		radial-gradient(at 98% 1%, rgba(255, 80, 80, 0.33) 0px, transparent 50%);
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 	@apply h-full overflow-hidden;
 }
